--- a/entertainment.html
+++ b/entertainment.html
@@ -21,7 +21,7 @@
         <a class="nav-item" id="quiz-nav-item" onclick="contact();">Contact</a>
         <a class="nav-item" id="quiz-nav-item" href="feedback.html">Feedback</a>
         <a class="nav-item" id="donation-nav" href="donate.html">Donate</a><span class="vl"></span>
-        <a class="nav-item" id="nav-item-login" href="login.html">Log In</a>
+        <a class="nav-item" id="nav-item-login" href="http://localhost/log/login.php/">Log In</a>
         <button class="nav-item" id="nav-quiz-button" onclick="location.href='quiz.html'">Take the Quiz</button>
     </nav>
     
