--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="nav-item" href="feedback.html">Feedback</a>
         <a class="nav-item" href="donate.html" >Donate</a><span class="vl"></span>
 
-        <a class="nav-item" id="nav-item-login" href="login.html">Log In</a>
+        <a class="nav-item" id="nav-item-login" href="http://localhost/log/login.php/">Log In</a>
         <button class="nav-item" id="nav-quiz-button" onclick="location.href='quiz.html'">Take the Quiz</button>
     </nav>
     
